# plugins/bulk-import-backend/src/schema/openapi.yaml
@@ -130,6 +130,38 @@ paths:
                 twoImports:
                   $ref: '#/components/examples/twoImports'
 
+  /import/by-repo:
+    get:
+      operationId: findImportStatusByRepo
+      summary: Get Import Status by repository
+      security:
+        - BearerAuth: []
+      tags: [Import]
+      parameters:
+        - in: query
+          name: repo
+          description: the full URL to the repo
+          schema:
+            type: string
+        - in: query
+          name: defaultBranch
+          description: the name of the default branch
+          schema:
+            type: string
+            default: 'main'
+      responses:
+        200:
+          description: Import Job status was determined successfully with no errors
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Import'
+              examples:
+                singleImportStatusForRepo:
+                  $ref: '#/components/examples/singleImportStatusForRepo'
+        500:
+          description: Generic error
+
 components:
   schemas:
     RepositoryList:
@@ -327,7 +359,6 @@ components:
         - id: 'bulk-import-id-1'
           status: 'WAIT_PR_APPROVAL'
           errors: []
-          lastUpdatedAt: 1711529803
           approvalTool: GIT
           repository:
             name: 'pet-app'
@@ -340,7 +371,6 @@ components:
         - id: 'bulk-import-id-2'
           status: 'PR_REJECTED'
           errors: []
-          lastUpdatedAt: 1611529803
           approvalTool: GIT
           repository:
             name: 'pet-app-test'
@@ -350,6 +380,22 @@ components:
             pullRequest:
               url: 'https://github.com/my-org/pet-app-test/pull/10'
               number: 10
+
+    singleImportStatusForRepo:
+      summary: Single import job status for given repo
+      value:
+        id: 'bulk-import-id-1'
+        status: 'WAIT_PR_APPROVAL'
+        errors: []
+        approvalTool: GIT
+        repository:
+          name: 'pet-app'
+          url: 'https://github.com/my-org/pet-app'
+          organization: 'my-org'
+        github:
+          pullRequest:
+            url: 'https://github.com/my-org/pet-app/pull/1'
+            number: 1
 
     multipleImportRequests:
       summary: Multiple import requests
